--- a/adventure-game/paragraf-adventure-game/src/App.css
+++ b/adventure-game/paragraf-adventure-game/src/App.css
@@ -40,3 +40,47 @@
 .read-the-docs {
   color: #888;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* This makes the container take the full height of the viewport */
+}
+h1 {
+  margin-bottomOne: 10px; /* Add space below the heading */
+}
+
+/* App.css */
+
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+buttonOne {
+  font-size:40px;
+  padding: 30px 60px;
+  border: none;
+  border-radius: 40px;
+  background-color: rgb(26, 24, 24);
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 10px 16px rgba(0, 0, 0, 0.1);
+}
+
+buttonOne:hover {
+  background-color: rgb(60, 119, 63);
+}
+
+.game-title {
+  font-size: 80px; /* Możesz dostosować rozmiar tekstu według potrzeb */
+  margin-bottom: 80px; /* Opcjonalne dostosowanie marginesu poniżej tytułu */
+}
+
+
