--- a/src/App.css
+++ b/src/App.css
@@ -156,17 +156,20 @@ button:hover {
 }
 
 .EnzoandNova {
-  background-image: url('public\image\EnzoandNovaIntro.jpeg');
+  background-image: url('/public/image/EnzoandNovaIntro.jpeg');
   border-radius: 40px;
-  background-size: cover;
-  background-position: center;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .SuperTommy {
-  background-image: url('public\image\SuperTommyIntro.jpeg');
+  background-image: url('public/image/SuperTommyIntro.jpeg');
   border-radius: 40px;
-  background-size: auto;
+  background-size: 100% 100%;
   background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .SuperTommysc1 {
