--- a/src/App.css
+++ b/src/App.css
@@ -162,6 +162,13 @@ button:hover {
   width: 100%;
   height: 100%;
 }
+.EnzoandNovasc1 {
+  background-color: violet;
+}
+
+.EnzoandNovasc2 {
+  background-color: pink;
+}
 
 .SuperTommy {
   background-image: url('/public/image/SuperTommyIntro.jpeg');
@@ -173,27 +180,39 @@ button:hover {
 }
 
 .SuperTommysc1 {
-  background-color: red;
-  background-size: cover;
+  background-image: url('/public/image/SuperTommysc1.jpeg');
+  border-radius: 40px;
+  background-size: 100% 100%;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .SuperTommysc2 {
-  background-color: green;
+  background-image: url('/public/image/SuperTommysc2.jpeg');
+  border-radius: 40px;
+  background-size: 100% 100%;
+  background-position: center;
+  width: 100%;
+  height: 100%
 }
 
-.SuperTommypart1_1 {
-  background-color: blue;
+.SuperTommysc1_1_1 {
+  background-image: url('/public/image/SuperTommysc1_1_1.jpeg');
+  border-radius: 40px;
+  background-size: 100% 100%;
+  background-position: center;
+  width: 100%;
+  height: 100%
 }
 
-/* Dla Enzo and Nova */
-.EnzoandNovasc1 {
-  background-color: violet;
+.SuperTommysc1_1_2 {
+  background-image: url('/public/image/SuperTommysc1_1_2.jpeg');
+  border-radius: 40px;
+  background-size: 100% 100%;
+  background-position: center;
+  width: 100%;
+  height: 100%
 }
 
-.EnzoandNovasc2 {
-  background-color: pink;
-}
 
-.EnzoandNovapart1_1 {
-  background-color: blue;
-}
