--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 
   color: rgba(255, 255, 255, 0.87);
   color-scheme: light dark;
-  /* background-color: #ff0000ea; */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -38,7 +37,6 @@ h1 {
   margin-bottom: 10px;
 } */
 
-/* App.css */
 
 body {
   font-family: 'Arial', sans-serif;
@@ -70,14 +68,13 @@ button:hover {
 }
 
 .game-title {
-  font-size: 80px; /* Możesz dostosować rozmiar tekstu według potrzeb */
+  font-size: 80px; 
   margin-bottom: 80px;
-  color: #333; /* Ustaw kolor napisu */
+  color: #333; 
   border-radius: 20%;
   padding: 5% 5%;
   background-color: rgba(255, 255, 255, 0.5)
 }
-/* Dodaj odpowiednie klasy dla przycisków */
 .buttonSelectionGame {
   width: 100%;
   height: 90%;
@@ -93,7 +90,6 @@ button:hover {
   background-color: rgb(60, 119, 63);
 }
 
-/* Dodaj styl dla kontenera z wyborem gier */
 .game-selection {
   display: flex;
   flex-direction: column;
@@ -108,7 +104,7 @@ button:hover {
   text-align: center;
   font-size: 300%;
   font-family: 'Arial', sans-serif;
-  margin-top:auto; /* Dostosuj margines według potrzeb */
+  margin-top:auto; 
   color: rgb(37, 153, 104);
 }
 
@@ -130,7 +126,7 @@ button:hover {
 .select-game {
   font-size: 300%;
   font-family: 'Arial', sans-serif;
-  margin-top: 10px; /* Dostosuj margines według potrzeb */
+  margin-top: 10px;
   height: 90px;
   width: 500px;
   color: rgb(161, 95, 95);
@@ -153,7 +149,7 @@ button:hover {
   font-style: italic;
   justify-content: center;
   align-items: center;
-  height: 100%; /* Wysokość na całą wysokość ekranu */
+  height: 100%; 
 }
 .buttonSelectionScennario {
   width: 100%;
@@ -292,6 +288,26 @@ button:hover {
   width: 100%;
   height: 100%
 }
+.mute-button img {
+  width: 32px; 
+  height: 32px;
+  
+}
+.mute-button {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  z-index: 1000;
+  border: none; 
+  background: transparent; 
+  padding: 0; 
+  outline: none; 
+}
+.mute-button.muted img {
+  filter: grayscale(100%); 
+}
+
+
 
 
 
